--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,13 @@
 {
   "name": "Airflow ELT Blueprint",
-  "image": "python:3.9-slim",
+  "image": "debian:bookworm-slim",
   "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "3.9"
+    },
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {
+      "moby": false
+    }
   },
   "postCreateCommand": "pip install 'astro-sdk-python>=1.6.0' && astro dev init",
   "customizations": {
